GOBE-73 Overall performance 1.1.2 FIx sidebar and login google

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -74,6 +74,7 @@
     "notLeaderFound": "Not found any leaders"
   },
   "sidebar": {
+    "dashboard": "My Dashboard",
     "myChallenge": "My Challenge",
     "myGroup": "My Group",
     "profile": "Profile",
