--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -243,6 +243,8 @@
     "errorGroups": "Không thể tải danh sách nhóm.",
     "members": "thành viên"
   },
+  "notification.achievementUnlock.title": "🎉 Thành tựu mới!",
+  "notification.achievementUnlock.content": "Bạn đã mở khóa thành tựu: '{{achievementName}}'.",
   "notification.challengeResult.title": "Kết quả thử thách: Hoàn thành",
   "notification.challengeResult.content": "Bạn đã hoàn thành thử thách '{{challengeName}}'! Kiểm tra thành tích của bạn nhé!",
   "notification.groupChallengeResult.title": "Kết quả thử thách nhóm: Hoàn thành",
@@ -775,90 +777,19 @@
     },
     "description": {
       "FIRST_TRY": "Tham gia thử thách đầu tiên.",
-      "DAILY_WARRIOR": "Hoàn thành 7 bài nộp liên tiếp.",
       "PROFILE_MASTER": "Điền đầy đủ thông tin hồ sơ.",
-      "INVITER": "Mời 1 thành viên vào thử thách thành công.",
-      "REVIEWER": "Đã đánh giá 10 bằng chứng.",
-      "PERFECT_ACCURACY": "Một bài nộp được duyệt 100%.",
-      "COMEBACK_SUBMITTER": "Nộp bài sau hơn 7 ngày không hoạt động.",
-      "RISING_STAR": "3 bài nộp được duyệt liên tiếp.",
-      "ACTIVE_VOTER": "Vote ở 5 thử thách khác nhau.",
-      "GROUP_HERO": "Dẫn dắt nhóm hoàn thành thử thách.",
-      "CONTRIBUTOR": "Tham gia ít nhất 3 thử thách.",
-      "STREAK_TRIPLE": "Chuỗi 3 ngày liên tục nộp bài.",
-      "STREAK_MASTER": "Chuỗi 10 ngày liên tục nộp bài.",
-      "NIGHT_OWL": "Nộp bài trong khoảng 0h–4h sáng.",
-      "EARLY_BIRD": "Nộp bài trước 6h sáng.",
-      "LONG_HAUL": "Hoàn thành thử thách 30 ngày.",
-      "FITNESS_CHAMPION": "Xếp hạng top 10 trong thử thách.",
-      "GROUP_LEGEND": "Nhóm xếp hạng nhất bảng.",
-      "CONSISTENT_TOPPER": "Top 3 liên tiếp 3 thử thách.",
-      "UNDERDOG": "Khởi đầu chậm nhưng bứt phá mạnh mẽ.",
-      "of": "trong số",
-      "achieved": "thành tích đã mở khóa",
-      "totalProgress": "Tổng tiến độ",
-      "progress": "Tiến độ",
-      "earned": "Đạt được",
-      "community": "Cộng đồng",
-      "users": "người dùng",
-      "unlocked": "ĐÃ MỞ KHÓA",
-      "locked": "CHƯA MỞ KHÓA",
-      "prev": "Trước",
-      "next": "Tiếp",
-      "notYetEarned": "Chưa đạt được",
-      "fitnessChampion": "Nhà vô địch thể hình",
-      "fitnessChampionDesc": "Xếp hạng trong top 10 của một thách thức hàng tháng.",
-      "peakPerformer": "Người thực hiện đỉnh cao",
-      "peakPerformerDesc": "Hoàn thành chương trình tập luyện cường độ cao.",
-      "perfectForm": "Hình thức hoàn hảo",
-      "perfectFormDesc": "Nhận điểm số hoàn hảo về kỹ thuật tập luyện.",
-      "risingAthlete": "Vận động viên đang lên",
-      "risingAthleteDesc": "Cải thiện điểm thể lực 50% trong một tháng.",
-      "quickStarter": "Người khởi đầu nhanh",
-      "quickStarterDesc": "Hoàn thành 5 bài tập khác nhau trong một ngày.",
-      "trainingStreak": "Chuỗi tập luyện",
-      "trainingStreakDesc": "Chuỗi 10 ngày liên tiếp hoàn thành bài tập.",
-      "hiitMaster": "Bậc thầy HIIT",
-      "hiitMasterDesc": "Hoàn thành bài tập HIIT với thời gian hoàn hảo.",
-      "teamPlayer": "Tinh thần đồng đội",
-      "teamPlayerDesc": "Hoàn thành 10 bài tập nhóm.",
-      "workoutPlanner": "Người lập kế hoạch tập luyện",
-      "workoutPlannerDesc": "Tạo và hoàn thành kế hoạch tập luyện tùy chỉnh.",
-      "eliteAthlete": "Vận động viên ưu tú",
-      "eliteAthleteDesc": "Duy trì xếp hạng thể lực top 5% trong một tháng.",
-      "challengeCreator": "Người tạo thách thức",
-      "challengeCreatorDesc": "Tạo một thách thức tập luyện với hơn 100 người tham gia.",
-      "fitnessMentor": "Người hướng dẫn thể hình",
-      "fitnessMentorDesc": "Giúp 20 người dùng khác cải thiện kỹ thuật tập luyện.",
-      "cardioKing": "Vua tim mạch",
-      "cardioKingDesc": "Chiến thắng 3 thử thách tim mạch liên tiếp.",
-      "calorieCrusher": "Kẻ đốt calo",
-      "calorieCrusherDesc": "Đốt 5.000 calo trong một tuần.",
-      "crossTrainer": "Người tập đa dạng",
-      "crossTrainerDesc": "Hoàn thành bài tập trong 5 danh mục thể hình khác nhau.",
-      "progressTracker": "Người theo dõi tiến độ",
-      "progressTrackerDesc": "Ghi chép bài tập trong 30 ngày liên tiếp.",
-      "globalAthlete": "Vận động viên toàn cầu",
-      "globalAthleteDesc": "Tham gia tập luyện với người dùng từ 5 quốc gia khác nhau.",
-      "mindBodyMaster": "Bậc thầy thể chất tinh thần",
-      "mindBodyMasterDesc": "Hoàn thành 10 buổi tập chánh niệm và yoga.",
-      "balancedDiet": "Chế độ ăn cân bằng",
-      "balancedDietDesc": "Ghi chép mục tiêu dinh dưỡng trong 25 ngày.",
-      "strengthChampion": "Nhà vô địch sức mạnh",
-      "strengthChampionDesc": "Thiết lập 10 kỷ lục cá nhân trong các bài tập sức mạnh.",
-      "enduranceBuilder": "Người xây dựng sức bền",
-      "enduranceBuilderDesc": "Hoàn thành thử thách sức bền kéo dài 2 giờ.",
-      "goalCrusher": "Người chinh phục mục tiêu",
-      "goalCrusherDesc": "Đạt được 5 mục tiêu thể hình cá nhân.",
-      "fitnessLegend": "Huyền thoại thể hình",
-      "fitnessLegendDesc": "Đạt được cấp độ thể hình cao nhất trong hệ thống.",
-      "fitnessExplorer": "Người khám phá thể hình",
-      "fitnessExplorerDesc": "Thử các bài tập trong tất cả các danh mục thể hình.",
-      "activeLifestyle": "Lối sống năng động",
-      "activeLifestyleDesc": "Ghi lại hoạt động thể chất trong 60 ngày liên tiếp."
-  },
+      "ACTIVE_VOTER": "Đã vote 10 bằng chứng.",
+      "CONTRIBUTOR": "Đã nộp 20 bằng chứng.",
+      "RISING_STAR": "Đã tham gia 5 thử thách.",
+      "STREAK_MASTER": "Đã nộp bài 30 ngày liên tiếp.",
+      "NIGHT_OWL": "Nộp bài sau 22h.",
+      "FITNESS_CHAMPION": "Xếp hạng top 10 bảng xếp hạng toàn hệ thống.",
+      "GROUP_LEGEND": "Nhóm đứng đầu bảng xếp hạng.",
+      "TRENDING_CREATOR": "Tạo thử thách có hơn 100 người tham gia."
+    }
 
-  "Moderation": {
+  },
+    "Moderation": {
     "unableToAnalyze": "Không phân tích được nội dung.",
     "rejectedBySummary": "Video vi phạm theo kiểm duyệt.",
     "fileTooLarge": "File quá lớn. Vui lòng chọn file nhỏ hơn 100MB.",
@@ -893,8 +824,8 @@
   },
   "images": {
     "notAvailable": "Không có ảnh"
-  }
   },
+
   "common": {
     "loading": "Đang tải"
   },
