--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -57,6 +57,8 @@
     "previous": "Trước",
     "next": "Sau",
     "page": "Trang",
+    "selectGroup": "Chọn nhóm tham gia thử thách",
+    "confirm": "Tham gia",
     "searchLeaderPlaceholder": "Nhập tên trưởng nhóm...",
     "suggestedTitle": "Gợi ý mời tham gia",
     "selectAtLeastOne": "Vui lòng chọn ít nhất một thành viên.",
