GOBE-73 Overall performance 1.2.3 Fix Challenge Status and Select Group and Detail

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -402,6 +402,8 @@
     }
   },
   "JoinsChallengeDetail": {
+    "confirmLeaveTitle": "Leave Challenge",
+    "confirmLeaveMessage": "Are you sure you want to leave this challenge? You won't be able to participate once you leave.",
     "confirmCancelTitle": "Confirm Cancellation",
     "confirmCancelMessage": "Are you sure you want to cancel this challenge?",
     "confirmCancelNo": "No, Keep",
