--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -875,9 +875,42 @@
     "joinSuccess": "Tham gia nhóm vào thử thách thành công!",
     "joinFail": "Không thể tham gia nhóm vào thử thách.",
     "selectGroupFirst": "Vui lòng chọn một nhóm trước khi tham gia."
+  },
+  "evidence": {
+    "title": "Bằng chứng",
+    "members": "Thành viên",
+    "for": "cho",
+    "searchMembers": "Tìm kiếm thành viên...",
+    "memberName": "Tên thành viên",
+    "evidenceCount": "Số lượng bằng chứng",
+    "status": {
+      "title": "Trạng thái",
+      "approved": "Đã duyệt",
+      "rejected": "Từ chối",
+      "pending": "Đang chờ",
+      "done": "Hoàn thành"
+    },
+    "date": "Ngày",
+    "pagination": {
+      "showing": "Hiển thị",
+      "to": "đến",
+      "of": "của",
+      "previous": "Trước",
+      "next": "Tiếp"
+    },
+    "statistics": "Thống kê",
+    "totalEvidence": "Tổng số bằng chứng",
+    "filtering": "Đang lọc",
+    "showingAll": "Hiển thị tất cả bằng chứng",
+    "noEvidenceFound": "Không tìm thấy bằng chứng nào",
+    "showAllEvidence": "Hiển thị tất cả bằng chứng",
+    "selectMember": "Chọn thành viên để xem bằng chứng",
+    "invalidDate": "Ngày không hợp lệ",
+    "evidenceNumber": "Bằng chứng",
+    "challenge": "Thử thách",
+    "unknown": "Không xác định",
+    "noDescription": "Không có mô tả"
   }
-
-
 }
 
 
