GOBE-73 Overall performance 1.2.6 Fix multiple language

--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -47,6 +47,10 @@
   "updateProfile": "プロフィールを更新",
   "selectChallengeType": "チャレンジタイプを選択",
   "challengeInvite": {
+    "loading": "グループリストを読み込み中...",
+    "loadError": "グループリストを読み込めませんでした",
+    "searchPlaceholderGroup": "グループ名で検索",
+    "members": "メンバー",
     "memberList": "メンバーリスト",
     "searchLeaderPlaceholder": "グループリーダー名を入力してください...",
     "searchPlaceholder": "名前またはメールアドレスで検索...",
@@ -606,6 +610,10 @@
   },
 
   "hostEvidence": {
+    "showStats": "チャレンジ統計を表示",
+    "hideStats": "チャレンジ統計を非表示",
+    "showPanel": "メンバーと証拠を表示",
+    "hidePanel": "メンバーと証拠を非表示",
     "members": "メンバー",
     "searchMembers": "メンバーを検索...",
     "memberName": "メンバー名",
@@ -1034,7 +1042,25 @@
     "challenge": "チャレンジ",
     "unknown": "不明",
     "noDescription": "説明なし"
+  },
+  "challengeStats": {
+    "loading": "統計を読み込み中...",
+    "loadError": "チャレンジの統計を読み込めませんでした。",
+    "dashboardTitle": "チャレンジ進捗ダッシュボード",
+    "challengeName": "チャレンジ名",
+    "totalParticipants": "参加者数",
+    "totalGroups": "グループ数",
+    "evidenceSubmitted": "提出された証拠",
+    "approvedEvidence": "承認された証拠",
+    "pendingEvidence": "保留中の証拠",
+    "rejectedEvidence": "却下された証拠",
+    "participationRate": "参加率",
+    "completionRate": "達成率",
+    "today": "今日",
+    "submittedToday": "本日提出",
+    "pendingToday": "本日保留"
   }
+
 }
 
 
